[project]
name = "jml"
version = "0.4.3"
description = "Ein Tool um Projektversionen zu generieren"
authors = [{ name = "J. Neugebauer", email = "ngb@helmholtz-bi.de" }]
requires-python = "~=3.8"
readme = "README.rst"
license = "MIT"
classifiers = ["Programming Language :: Python :: 3"]
dependencies = ["click>=8.0.3", "rich>=14.0.0", "toml>=0.10.2"]

[project.urls]
Homepage = "http://github.com/jneug/jml"
Repository = "http://github.com/jneug/jml"

[project.scripts]
jml = "jml.jml:cli"

[dependency-groups]
dev = [
	"pytest>=6.2.5,<7",
	"isort>=5.10.1,<6",
	"black~=21.12b0",
	"flake8>=4.0.1,<5",
	"mypy>=0.931,<0.932",
	"tbump>=6.7.0,<7",
	"mkdocs>=1.6.1",
	"mkdocs-material>=9.6.14",
	"mkdocstrings[python]>=0.26.1",
]

[tool.hatch.build.targets.sdist]
include = ["src/jml"]

[tool.hatch.build.targets.wheel]
include = ["src/jml"]

[tool.hatch.build.targets.wheel.sources]
"src/jml" = "jml"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.isort]
profile = "black"

[tool.tbump]
# Uncomment this if your project is hosted on GitHub:
#github_url = "https://github.com/jneug/jml/"

[tool.tbump.version]
current = "0.4.3"
regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  '''

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

[[tool.tbump.file]]
src = "src/jml/__init__.py"
search = '__version__ = "{current_version}"'

[[tool.tbump.file]]
src = "tests/test_jml.py"
search = 'assert __version__ == "{current_version}"'

[[tool.tbump.file]]
src = "pyproject.toml"
search = 'version = "{current_version}"'

[[tool.tbump.file]]
src = "README.rst"
search = 'jml, version {current_version}'
